Fixed many running-game-in-dev related problems (#468)
* Make fml handle folder mod as developing mod

* Handle developing mod folders

* Fix Forge resource not loading in cleanroomClient

* Ignores Forge path in scanning